[gd_scene load_steps=18 format=3 uid="uid://bpt12tgpm70ys"]

[ext_resource type="Script" uid="uid://bh6akojg55un8" path="res://Scripts/LevelEntrance.gd" id="1_ry522"]
[ext_resource type="Texture2D" uid="uid://ce5dirnc4lclh" path="res://Sprites/Tilesets/WorldMaps/Levels.png" id="2_fg5sb"]
[ext_resource type="AudioStream" uid="uid://d8nt0fqqkekh" path="res://Audio/Sfx/MapStart.mp3" id="3_fg5sb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fy40d"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_30bqu"]
atlas = ExtResource("2_fg5sb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry522"]
atlas = ExtResource("2_fg5sb")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg5sb"]
atlas = ExtResource("2_fg5sb")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy40d"]
atlas = ExtResource("2_fg5sb")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i11j"]
atlas = ExtResource("2_fg5sb")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qpvn"]
atlas = ExtResource("2_fg5sb")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc54x"]
atlas = ExtResource("2_fg5sb")
region = Rect2(192, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ql0l"]
atlas = ExtResource("2_fg5sb")
region = Rect2(192, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1eyl"]
atlas = ExtResource("2_fg5sb")
region = Rect2(176, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cbrt"]
atlas = ExtResource("2_fg5sb")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucptm"]
atlas = ExtResource("2_fg5sb")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0wud"]
atlas = ExtResource("2_fg5sb")
region = Rect2(192, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2i11j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30bqu")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry522")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg5sb")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy40d")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i11j")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qpvn")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc54x")
}],
"loop": true,
"name": &"card",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ql0l")
}],
"loop": true,
"name": &"castle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1eyl")
}],
"loop": true,
"name": &"peach_castle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cbrt")
}],
"loop": true,
"name": &"pipe",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucptm")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0wud")
}],
"loop": true,
"name": &"toad_house",
"speed": 5.0
}]

[node name="LevelEntrance" type="Area2D"]
script = ExtResource("1_ry522")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fy40d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2i11j")
animation = &"start"

[node name="EnterLevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fg5sb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
